@@ -1,3 +1,8 @@
+2004-04-08  Eric Blake  <ebb9@byu.net>
+
+	* src/class.cpp (Init) [!JIKES_DEBUG]: Fix regression in non-debug
+	builds from previous patch.
+
 2004-04-07  Eric Blake  <ebb9@byu.net>
 
 	* src/depend.cpp (AddDependence): Move array, primitive processing
